# miguelangelia_FinancialAnalyticalChatBot

./: .gitignore  analysis.py  analyze.py  auto_report.html  dashboard.html  dashboard.py  dashboard2.py  file.py  gg.py  main.py  pp.py  pyproject.toml  report.py  requirements.txt  summery.py  sweetviz_dashboard.html
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  logging.py
app/routes/: bot_endpoint.py  create_chatsession_endpoint.py  file_explore_endpoint.py  financial_bot_endpoint.py  general_bot_endpoint.py  generate_dashboard.py  report_generate.py  summary_and_report_generator_endpoint.py  summery_endpoint.py  thread_creation_endpoint.py  thread_deletion_endpoint.py
app/schemas/: dashboard_schema.py  file_exploar_shcema.py  report_schema.py
app/services/: analysis.py  apple_stock_data.csv  bot.py  clean_llm_response.py  dashboard_service.py  dataset_download.py  df_op.ipynb  file_explore.py  financial_bot.py  general_bot.py  get_thread_history.py  llm_call.py  memory.py  mongodb.py  report_service.py  summery_service.py  title_generator.py
