[project]
name = "financialanalyticalchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "langsmith>=0.4.37",
    "openai>=2.3.0",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
]
